third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/mutate_full_invalid.no-opt.exp

Diagnostics:
error: mutable reference in local `x` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:13:9
   │
13 │         *x = 0;
   │         ^^^^^^ requirement enforced here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write to reference in local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:18:9
   │
17 │         let f = freeze(x);
   │                 --------- previous freeze
18 │         *x = 0;
   │         ^^^^^^ written here

error: mutable reference in local `x` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:18:9
   │
17 │         let f = freeze(x);
   │                 --------- previous freeze
18 │         *x = 0;
   │         ^^^^^^ requirement enforced here
19 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write to reference in local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:23:9
   │
22 │         let f = id(x);
   │                 -----
   │                 │  │
   │                 │  previous freeze
   │                 used by call result
23 │         *x = 0;
   │         ^^^^^^ written here

error: mutable reference in local `x` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:23:9
   │
22 │         let f = id(x);
   │                 -----
   │                 │  │
   │                 │  previous freeze
   │                 used by call result
23 │         *x = 0;
   │         ^^^^^^ requirement enforced here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write to reference in local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:28:9
   │
27 │         let f = id_mut(x);
   │                 --------- previous mutable call result
28 │         *x = 0;
   │         ^^^^^^ written here

error: mutable reference in local `x` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:28:9
   │
27 │         let f = id_mut(x);
   │                 --------- previous mutable call result
28 │         *x = 0;
   │         ^^^^^^ requirement enforced here
29 │         *f;
   │         -- conflicting reference `f` used here
